syntax = "proto3";

package protos;

option go_package = "snippetBox-microservice\\catalog\\api\\grpc\\protobuffs;protobuffs";

message ProductSendRequest {
  int32 Id = 1;
}

message ProductSendResponse {
  int32 Id = 1;
  string Title = 2;
  string Category = 3;
  string Description = 4;
  float Price = 5;
}

service CatalogService {
  rpc SendProduct(ProductSendRequest) returns(ProductSendResponse) {};
}